ingress/stageingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hi-class-api-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - stagea.example.net
    secretName: aks-ingress-tls
  rules:
  - host: stagea.example.net
    http:
      paths:
      - path: /
        backend:
          serviceName: hi-class-api
          servicePort: 80
